--- a/src/AzureFunctions.Contrib.Redis/AzureFunctions.Contrib.Redis.csproj
+++ b/src/AzureFunctions.Contrib.Redis/AzureFunctions.Contrib.Redis.csproj
@@ -2,30 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Fbeltrao.AzureFunctionExtensions</RootNamespace>
+    <RootNamespace>AzureFunctions.Contrib.Redis</RootNamespace>
     <AssemblyName>AzureFunctions.Contrib.Redis</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>Azure Functions</PackageTags>
-    <RepositoryUrl>https://github.com/fbeltrao/AzureFunctionExtensions</RepositoryUrl>
+    <PackageTags>Azure Functions Redis</PackageTags>
+    <RepositoryUrl>https://github.com/AzureFunctionsContrib/AzureFunctions.Contrib.Redis</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/fbeltrao/AzureFunctionExtensions</PackageProjectUrl>
-    <Description>Set of Azure Function Extensions. Currently bindings:
-- Redis
-- HttpCall
-- EventGrid
-- Azure SignalR</Description>
+    <PackageProjectUrl>https://github.com/AzureFunctionsContrib/AzureFunctions.Contrib.Redis</PackageProjectUrl>
+    <Description>Redis bindings for Azure Functions</Description>
     <Version>1.0.0-beta1</Version>
     <NeutralLanguage>en</NeutralLanguage>
     <Authors>fbeltrao</Authors>
-    <Company>fbeltrao</Company>
-    <Product>Azure Functions Extensions</Product>
+    <Product>Azure Functions Contrib Extensions</Product>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.0-beta5" />
     <PackageReference Include="StackExchange.Redis.StrongName.Core" Version="1.1.605" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.1.4" />
   </ItemGroup>
 
 </Project>
